--- a/ttt.html
+++ b/ttt.html
@@ -8,21 +8,31 @@
     <title>TICTACTOE</title>
 </head>
 <body>
+    <h1 id="title">TICTACTOE</h1>
+    <div class="center">
+        <h2 id="instr">
+            X turn
+        </h2>
+    
+    <div class="grid">
     <div class="container">
-        <div class="box" id="one">Box 1</div>
-        <div class="box" id="two">Box 2</div>
-        <div class="box" id="three">Box 3</div>
+        <div class="box" id="one"></div>
+        <div class="box" id="two"></div>
+        <div class="box" id="three"></div>
     </div>
     <div class="container">
-        <div class="box" id="four">Box 4</div>
-        <div class="box" id="five">Box 5</div>
-        <div class="box" id="six">Box 6</div>
+        <div class="box" id="four"></div>
+        <div class="box" id="five"></div>
+        <div class="box" id="six"></div>
     </div>  
     <div class="container">
-    <div class="box" id="seven">Box 7</div>
-    <div class="box" id="eight">Box 8</div>
-    <div class="box" id="nine">Box 9</div>
+    <div class="box" id="seven"></div>
+    <div class="box" id="eight"></div>
+    <div class="box" id="nine"></div>
     </div>
+</div>
+</div>
+    <button id="btn">Restart</button>
     
 </body>
 <script src="code.js"></script>
